--- a/src/main/resources/nopointers/Word-Wizard.fxml
+++ b/src/main/resources/nopointers/Word-Wizard.fxml
@@ -33,17 +33,39 @@
 -->
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nopointers.Controller">
-   <children>
-      <Button layoutX="40.0" layoutY="32.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="40.0" layoutY="77.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="40.0" layoutY="118.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="256.0" layoutY="321.0" mnemonicParsing="false" onAction="#newPuzzle" prefHeight="42.0" prefWidth="88.0" text="New Game" />
-      <TextArea prefHeight="200.0" prefWidth="200.0" />
-      <Text layoutX="277.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-   </children>
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
+   <left>
+      <ToolBar orientation="VERTICAL" prefHeight="374.0" prefWidth="99.0" BorderPane.alignment="CENTER">
+        <items>
+          <Button mnemonicParsing="false" text="Button" />
+        </items>
+      </ToolBar>
+   </left>
+</BorderPane>
