--- a/src/main/resources/nopointers/Word-Wizard.fxml
+++ b/src/main/resources/nopointers/Word-Wizard.fxml
@@ -32,17 +32,23 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nopointers.Controller">
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
+      <MenuBar prefHeight="27.0" prefWidth="611.0" BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
@@ -63,13 +69,64 @@
       </MenuBar>
    </top>
    <left>
-      <ToolBar orientation="VERTICAL" prefHeight="374.0" prefWidth="99.0" BorderPane.alignment="CENTER">
-        <items>
-          <Button fx:id="New" mnemonicParsing="false" onAction="#New"  prefHeight="22.0" prefWidth="80.0" text="New" textAlignment="CENTER" />
-        </items>
-      </ToolBar>
+      <VBox BorderPane.alignment="CENTER" />
    </left>
    <center>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="22.13671875" BorderPane.alignment="CENTER" />
+      <Pane prefHeight="375.0" prefWidth="367.0" styleClass="starry-night-pane" stylesheets="@../StyleSheets/Backgrounds/mainBG.css" BorderPane.alignment="CENTER">
+         <children>
+            <HBox layoutY="86.0" prefHeight="100.0" prefWidth="400.0">
+               <children>
+                  <HBox prefHeight="100.0" prefWidth="274.0" />
+               </children>
+            </HBox>
+            <HBox layoutX="448.0" layoutY="92.0" prefHeight="86.0" prefWidth="347.0">
+               <children>
+                  <Label fx:id="pdislay" alignment="CENTER" prefHeight="86.0" prefWidth="445.0" text="Puzzle" textAlignment="CENTER" textFill="#fff205">
+                     <font>
+                        <Font name="Harrington" size="72.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <TextField fx:id="gfield" layoutX="455.0" layoutY="178.0" prefHeight="36.0" prefWidth="311.0" />
+            <Button fx:id="b1" layoutX="785.0" layoutY="179.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#guess" prefHeight="35.0" prefWidth="169.0" snapToPixel="false" style="-fx-font-size: 22;" styleClass="wizard-button" stylesheets="@../StyleSheets/buttons.css" text="Guess" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <VBox layoutX="1012.0" layoutY="170.0" prefHeight="373.0" prefWidth="156.0">
+               <children>
+                  <VBox prefHeight="86.0" prefWidth="108.0">
+                     <children>
+                        <TextField editable="false" prefHeight="58.0" prefWidth="119.0" styleClass="comic-sans-text-field" stylesheets="@../StyleSheets/Found.css" text="Rank" />
+                     </children>
+                  </VBox>
+                  <TextArea fx:id="guessed" editable="false" prefHeight="307.0" prefWidth="106.0" />
+               </children>
+            </VBox>
+            <VBox layoutX="370.0" layoutY="377.0" />
+          <Button fx:id="b" layoutX="433.0" layoutY="295.0" mnemonicParsing="false" onAction="#NewPuzzle" prefHeight="64.0" prefWidth="77.0" styleClass="wizard-button" stylesheets="@../StyleSheets/Size%20Buttons.css" text="New" textAlignment="CENTER" textFill="WHITE">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font name="Ink Free" size="25.0" />
+               </font>
+            </Button>
+            <Button fx:id="b2" layoutX="433.0" layoutY="495.0" mnemonicParsing="false" onAction="#shuffle" prefHeight="64.0" prefWidth="78.0" styleClass="wizard-button" stylesheets="@../StyleSheets/Size%20Buttons.css" text="Shuffle" textAlignment="CENTER" textFill="WHITE">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font name="Comic Sans MS" size="15.0" />
+               </font>
+            </Button>
+            <Label fx:id="requiredLetter" alignment="CENTER" ellipsisString="" layoutX="594.0" layoutY="14.0" prefHeight="86.0" prefWidth="55.0" textFill="#ff6800">
+               <font>
+                  <Font name="Harrington" size="72.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
    </center>
 </BorderPane>
