--- a/src/main/resources/StyleSheets/Size Buttons.css
+++ b/src/main/resources/StyleSheets/Size Buttons.css
@@ -2,7 +2,7 @@
 .wizard-button {
     -fx-background-color: #dad744; /* Normal state background color */
     -fx-text-fill: #000000; /* Text color */
-    -fx-font-family: "Comic Sans MS"; /* Font family */
+    -fx-font-family: "Sans-serif "; /* Font family */
     -fx-font-size: 16px; /* Font size */
     -fx-padding: 5px 10px; /* Padding */
     -fx-background-radius: 5px; /* Rounded corners */
