--- a/src/main/resources/StyleSheets/buttons.css
+++ b/src/main/resources/StyleSheets/buttons.css
@@ -2,11 +2,11 @@
 .wizard-button {
     -fx-background-color: #00ff0d; /* Normal state background color */
     -fx-text-fill: #000000; /* Text color */
-    -fx-font-family: "Harrington"; /* Font family */
+    -fx-font-family: "Sans-serif"; /* Font family */
     -fx-font-size: 16px; /* Font size */
     -fx-padding: 5px 10px; /* Padding */
     -fx-background-radius: 5px; /* Rounded corners */
-    -fx-border-color: #2980b9; /* Border color */
+ 
     -fx-border-width: 2px; /* Border width */
 }
 
