Changes to GUI adding Buttons

--- a/src/main/resources/StyleSheets/Backgrounds/mainBG.css
+++ b/src/main/resources/StyleSheets/Backgrounds/mainBG.css
@@ -1,4 +1,4 @@
  
 .backgroundColor{
-    -fx-background-color: linear-gradient(to right,#5c2eb1, #3d50bd);
+    -fx-background-color: linear-gradient(to right,#009dff, #3d50bd);
 }
