--- a/src/main/resources/nopointers/Word-Wizard.fxml
+++ b/src/main/resources/nopointers/Word-Wizard.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -44,6 +45,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nopointers.Controller">
@@ -154,6 +156,8 @@
                   <Font size="32.0" />
                </font></Button>
             <TextArea layoutX="70.0" layoutY="277.0" prefHeight="200.0" prefWidth="200.0" visible="false" />
+            <Circle fill="DODGERBLUE" layoutX="537.0" layoutY="342.0" radius="44.0" stroke="BLACK" strokeType="INSIDE" />
+            <MFXButton layoutX="594.0" layoutY="375.0" />
          </children>
       </Pane>
    </center>
