--- a/src/main/resources/StyleSheets/circlebutton.css
+++ b/src/main/resources/StyleSheets/circlebutton.css
@@ -2,7 +2,7 @@
  
 
     -fx-background-radius: 50em; /* Makes the button circular */
-   
+    -fx-background-color: #e2dddd;
     -fx-font-size: 20px;
     -fx-padding: 10px;
     -fx-border-radius: 50em; /* Optional: Adds a circular border */
