--- a/src/main/resources/nopointers/GUI2.fxml
+++ b/src/main/resources/nopointers/GUI2.fxml
@@ -1,80 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nopointers.Controller">
    <children>
       <VBox prefHeight="653.0" prefWidth="1150.0" VBox.vgrow="ALWAYS">
          <children>
-            <Pane prefHeight="797.0" prefWidth="1280.0" styleClass="root" stylesheets="@../StyleSheets/BG.css">
+            <Pane prefHeight="805.0" prefWidth="1279.0" styleClass="root" stylesheets="@../StyleSheets/BG.css">
                <children>
-                  <Button fx:id="l4" layoutX="525.0" layoutY="420.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css">
+                  <Button fx:id="l4" layoutX="534.0" layoutY="375.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                      <effect>
-                        <ColorAdjust hue="0.37" saturation="1.0" />
+                        <InnerShadow />
                      </effect></Button>
-                  <Button fx:id="l3" layoutX="611.0" layoutY="474.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css">
-                     <effect>
-                        <ColorAdjust brightness="0.05" hue="0.01" saturation="0.55" />
-                     </effect>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor></Button>
-                  <Button fx:id="l5" layoutX="525.0" layoutY="323.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css">
-                     <effect>
-                        <ColorAdjust hue="0.52" saturation="0.68" />
-                     </effect>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor></Button>
-                  <Button fx:id="l0" layoutX="611.0" layoutY="261.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css">
-                     <effect>
-                        <ColorAdjust brightness="0.21" contrast="-0.21" hue="-0.47" saturation="0.54" />
-                     </effect>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor></Button>
-                  <Button fx:id="l2" layoutX="696.0" layoutY="420.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css" textFill="WHITE">
+                  <Button fx:id="l3" layoutX="620.0" layoutY="429.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                      <effect>
-                        <ColorAdjust hue="0.12" saturation="0.78" />
-                     </effect>
+                        <InnerShadow />
+                     </effect></Button>
+                  <Button fx:id="l5" layoutX="534.0" layoutY="278.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <effect>
+                        <InnerShadow />
+                     </effect></Button>
+                  <Button fx:id="l0" layoutX="620.0" layoutY="216.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <effect>
+                        <InnerShadow />
+                     </effect></Button>
+                  <Button fx:id="l2" layoutX="705.0" layoutY="375.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                      <font>
                         <Font size="18.0" />
-                     </font></Button>
-                  <Button fx:id="l1" layoutX="696.0" layoutY="323.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css">
+                     </font>
+                     <effect>
+                        <InnerShadow />
+                     </effect></Button>
+                  <Button fx:id="l1" layoutX="705.0" layoutY="278.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                      <effect>
-                        <ColorAdjust hue="0.94" saturation="0.46" />
+                        <InnerShadow />
                      </effect></Button>
-                  <Button fx:id="requiredLetter" layoutX="611.0" layoutY="368.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css" underline="true">
-                     <effect>
-                        <ColorAdjust brightness="0.33" saturation="-0.16" />
-                     </effect>
+                  <Button fx:id="requiredLetter" layoutX="620.0" layoutY="323.0" maxHeight="62.0" maxWidth="61.0" minHeight="37.0" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="62.0" prefWidth="61.0" scaleX="1.25" scaleY="1.25" style="-fx-background-color: #ebd405;" styleClass="circular-button" stylesheets="@../StyleSheets/circlebutton.css" underline="true">
                      <cursor>
                         <Cursor fx:constant="HAND" />
-                     </cursor></Button>
-                  <Button layoutX="47.0" layoutY="735.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="150.0" text="Save" />
-                  <Button layoutX="219.0" layoutY="735.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="150.0" text="Load" />
-                  <Button fx:id="shuffle" layoutX="455.0" layoutY="536.0" mnemonicParsing="false" onAction="#shuffle" prefHeight="58.0" prefWidth="62.0" text="Shuffle" />
-                  <Button fx:id="newPuzzle" layoutX="765.0" layoutY="536.0" mnemonicParsing="false" onAction="#guess" prefHeight="58.0" prefWidth="62.0" text="Guess" />
-                  <TextField fx:id="input" layoutX="493.0" layoutY="89.0" onAction="#guess">
+                     </cursor>
+                     <effect>
+                        <InnerShadow />
+                     </effect></Button>
+                  <Button fx:id="saveButton" layoutX="47.0" layoutY="735.0" mnemonicParsing="false" onAction="#save" prefHeight="41.0" prefWidth="150.0" text="Save" />
+                  <Button fx:id="loadButton" layoutX="219.0" layoutY="735.0" mnemonicParsing="false" onAction="#load" prefHeight="41.0" prefWidth="150.0" text="Load" />
+                  <Button fx:id="shuffle" layoutX="607.0" layoutY="554.0" mnemonicParsing="false" onAction="#shuffle" prefHeight="41.0" prefWidth="87.0" styleClass="shuffle-button" stylesheets="@../StyleSheets/Shuffle.css" text="Shuffle">
+                     <effect>
+                        <InnerShadow />
+                     </effect></Button>
+                  <Button fx:id="guess" layoutX="774.0" layoutY="492.0" mnemonicParsing="false" onAction="#guess" prefHeight="58.0" prefWidth="62.0" text="Guess">
+                     <effect>
+                        <InnerShadow />
+                     </effect></Button>
+                  <TextField fx:id="input" alignment="CENTER" layoutX="493.0" layoutY="89.0" onAction="#guess" promptText="Enter or Guess">
                      <font>
                         <Font size="24.0" />
                      </font>
                   </TextField>
+                  <VBox layoutX="1046.0" layoutY="253.0" prefHeight="321.0" prefWidth="204.0">
+                     <children>
+                        <TextArea fx:id="foundWords" editable="false" opacity="0.85" prefHeight="340.0" prefWidth="225.0" wrapText="true">
+                           <effect>
+                              <InnerShadow />
+                           </effect>
+                           <font>
+                              <Font size="24.0" />
+                           </font></TextArea>
+                     </children>
+                  </VBox>
+                  <Button fx:id="newPuzzle" layoutX="47.0" layoutY="668.0" mnemonicParsing="false" onAction="#NewPuzzle" prefHeight="41.0" prefWidth="150.0" text="New">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets></Button>
+                  <Button fx:id="deleteButton" layoutX="464.0" layoutY="492.0" mnemonicParsing="false" onAction="#delete" prefHeight="58.0" prefWidth="62.0" text="Delete">
+                     <effect>
+                        <InnerShadow />
+                     </effect></Button>
+                  <Text fill="#ffe100" layoutX="391.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Word Wizards">
+                     <font>
+                        <Font name="Algerian" size="75.0" />
+                     </font>
+                  </Text>
+                  <Button fx:id="newPuzzle1" layoutX="219.0" layoutY="668.0" mnemonicParsing="false" onAction="#NewPuzzle" prefHeight="41.0" prefWidth="150.0" text="Help">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </Button>
+                  <Text fill="#ffe100" layoutX="1058.0" layoutY="233.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Found Words">
+                     <font>
+                        <Font name="Algerian" size="28.0" />
+                     </font>
+                  </Text>
                </children>
             </Pane>
          </children>
