--- a/src/main/resources/nopointers/GUI2.fxml
+++ b/src/main/resources/nopointers/GUI2.fxml
@@ -69,13 +69,19 @@
                      <effect>
                         <InnerShadow />
                      </effect></Button>
-                  <Button fx:id="saveButton" layoutX="47.0" layoutY="735.0" mnemonicParsing="false" onAction="#save" prefHeight="41.0" prefWidth="150.0" text="Save" />
-                  <Button fx:id="loadButton" layoutX="219.0" layoutY="735.0" mnemonicParsing="false" onAction="#load" prefHeight="41.0" prefWidth="150.0" text="Load" />
-                  <Button fx:id="shuffle" layoutX="607.0" layoutY="554.0" mnemonicParsing="false" onAction="#shuffle" prefHeight="41.0" prefWidth="87.0" styleClass="shuffle-button" stylesheets="@../StyleSheets/Shuffle.css" text="Shuffle">
+                  <Button fx:id="saveButton" layoutX="47.0" layoutY="735.0" mnemonicParsing="false" onAction="#save" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Save">
                      <effect>
                         <InnerShadow />
                      </effect></Button>
-                  <Button fx:id="guess" layoutX="774.0" layoutY="492.0" mnemonicParsing="false" onAction="#guess" prefHeight="58.0" prefWidth="62.0" text="Guess">
+                  <Button fx:id="loadButton" layoutX="219.0" layoutY="735.0" mnemonicParsing="false" onAction="#load" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Load">
+                     <effect>
+                        <InnerShadow />
+                     </effect></Button>
+                  <Button fx:id="shuffle" layoutX="607.0" layoutY="554.0" mnemonicParsing="false" onAction="#shuffle" prefHeight="41.0" prefWidth="87.0" style="-fx-background-color: beige;" styleClass="shuffle-button" stylesheets="@../StyleSheets/Shuffle.css" text="Shuffle">
+                     <effect>
+                        <InnerShadow />
+                     </effect></Button>
+                  <Button fx:id="guess" layoutX="774.0" layoutY="492.0" mnemonicParsing="false" onAction="#guess" prefHeight="58.0" prefWidth="62.0" style="-fx-background-color: lime;" text="Guess">
                      <effect>
                         <InnerShadow />
                      </effect></Button>
@@ -95,11 +101,14 @@
                            </font></TextArea>
                      </children>
                   </VBox>
-                  <Button fx:id="newPuzzle" layoutX="47.0" layoutY="668.0" mnemonicParsing="false" onAction="#NewPuzzle" prefHeight="41.0" prefWidth="150.0" text="New">
+                  <Button fx:id="newPuzzle" layoutX="47.0" layoutY="668.0" mnemonicParsing="false" onAction="#NewPuzzle" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="New">
                      <opaqueInsets>
                         <Insets />
-                     </opaqueInsets></Button>
-                  <Button fx:id="deleteButton" layoutX="464.0" layoutY="492.0" mnemonicParsing="false" onAction="#delete" prefHeight="58.0" prefWidth="62.0" text="Delete">
+                     </opaqueInsets>
+                     <effect>
+                        <InnerShadow />
+                     </effect></Button>
+                  <Button fx:id="deleteButton" layoutX="464.0" layoutY="492.0" mnemonicParsing="false" onAction="#delete" prefHeight="58.0" prefWidth="62.0" style="-fx-background-color: crimson;" text="Delete">
                      <effect>
                         <InnerShadow />
                      </effect></Button>
@@ -108,10 +117,13 @@
                         <Font name="Algerian" size="75.0" />
                      </font>
                   </Text>
-                  <Button fx:id="newPuzzle1" layoutX="219.0" layoutY="668.0" mnemonicParsing="false" onAction="#NewPuzzle" prefHeight="41.0" prefWidth="150.0" text="Help">
+                  <Button fx:id="newPuzzle1" layoutX="219.0" layoutY="668.0" mnemonicParsing="false" onAction="#NewPuzzle" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Help">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
+                     <effect>
+                        <InnerShadow />
+                     </effect>
                   </Button>
                   <Text fill="#ffe100" layoutX="1058.0" layoutY="233.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Found Words">
                      <font>
