--- a/src/main/resources/nopointers/GUI2.fxml
+++ b/src/main/resources/nopointers/GUI2.fxml
@@ -3,8 +3,10 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -72,25 +74,37 @@
                   <Button fx:id="saveButton" layoutX="47.0" layoutY="735.0" mnemonicParsing="false" onAction="#save" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Save">
                      <effect>
                         <InnerShadow />
-                     </effect></Button>
+                     </effect>
+                     <font>
+                        <Font name="Algerian" size="22.0" />
+                     </font></Button>
                   <Button fx:id="loadButton" layoutX="219.0" layoutY="735.0" mnemonicParsing="false" onAction="#load" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Load">
                      <effect>
                         <InnerShadow />
-                     </effect></Button>
+                     </effect>
+                     <font>
+                        <Font name="Algerian" size="22.0" />
+                     </font></Button>
                   <Button fx:id="shuffle" layoutX="607.0" layoutY="554.0" mnemonicParsing="false" onAction="#shuffle" prefHeight="41.0" prefWidth="87.0" style="-fx-background-color: beige;" styleClass="shuffle-button" stylesheets="@../StyleSheets/Shuffle.css" text="Shuffle">
                      <effect>
                         <InnerShadow />
-                     </effect></Button>
+                     </effect>
+                     <font>
+                        <Font name="Algerian" size="16.0" />
+                     </font></Button>
                   <Button fx:id="guess" layoutX="774.0" layoutY="492.0" mnemonicParsing="false" onAction="#guess" prefHeight="58.0" prefWidth="62.0" style="-fx-background-color: lime;" text="Guess">
                      <effect>
                         <InnerShadow />
-                     </effect></Button>
-                  <TextField fx:id="input" alignment="CENTER" layoutX="493.0" layoutY="89.0" onAction="#guess" promptText="Enter or Guess">
+                     </effect>
+                     <font>
+                        <Font name="Algerian" size="14.0" />
+                     </font></Button>
+                  <TextField fx:id="input" alignment="CENTER" layoutX="493.0" layoutY="89.0" onAction="#guess" promptText="Enter, Guess, Custom">
                      <font>
                         <Font size="24.0" />
                      </font>
                   </TextField>
-                  <VBox layoutX="1046.0" layoutY="253.0" prefHeight="321.0" prefWidth="204.0">
+                  <VBox layoutX="986.0" layoutY="251.0" prefHeight="321.0" prefWidth="204.0">
                      <children>
                         <TextArea fx:id="foundWords" editable="false" opacity="0.85" prefHeight="340.0" prefWidth="225.0" wrapText="true">
                            <effect>
@@ -98,7 +112,8 @@
                            </effect>
                            <font>
                               <Font size="24.0" />
-                           </font></TextArea>
+                           </font>
+                        </TextArea>
                      </children>
                   </VBox>
                   <Button fx:id="newPuzzle" layoutX="47.0" layoutY="668.0" mnemonicParsing="false" onAction="#NewPuzzle" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="New">
@@ -107,29 +122,110 @@
                      </opaqueInsets>
                      <effect>
                         <InnerShadow />
-                     </effect></Button>
-                  <Button fx:id="deleteButton" layoutX="464.0" layoutY="492.0" mnemonicParsing="false" onAction="#delete" prefHeight="58.0" prefWidth="62.0" style="-fx-background-color: crimson;" text="Delete">
+                     </effect>
+                     <font>
+                        <Font name="Algerian" size="24.0" />
+                     </font></Button>
+                  <Button fx:id="deleteButton" layoutX="464.0" layoutY="492.0" mnemonicParsing="false" onAction="#delete" prefHeight="58.0" prefWidth="62.0" style="-fx-background-color: crimson;" text="DEL">
                      <effect>
                         <InnerShadow />
-                     </effect></Button>
+                     </effect>
+                     <font>
+                        <Font name="Algerian" size="20.0" />
+                     </font></Button>
                   <Text fill="#ffe100" layoutX="391.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Word Wizards">
                      <font>
                         <Font name="Algerian" size="75.0" />
                      </font>
+                     <effect>
+                        <DropShadow />
+                     </effect>
                   </Text>
-                  <Button fx:id="newPuzzle1" layoutX="219.0" layoutY="668.0" mnemonicParsing="false" onAction="#NewPuzzle" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Help">
+                  <Button fx:id="newPuzzle1" layoutX="219.0" layoutY="668.0" mnemonicParsing="false" onAction="#setHelp" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Help">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
                      <effect>
                         <InnerShadow />
                      </effect>
+                     <font>
+                        <Font name="Algerian" size="24.0" />
+                     </font>
                   </Button>
-                  <Text fill="#ffe100" layoutX="1058.0" layoutY="233.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Found Words">
+                  <Text fill="#ffe100" layoutX="987.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Found Words">
                      <font>
                         <Font name="Algerian" size="28.0" />
                      </font>
+                     <effect>
+                        <DropShadow />
+                     </effect>
                   </Text>
+                  <Text fill="#ffe100" layoutX="987.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score:" wrappingWidth="101.46875">
+                     <font>
+                        <Font name="Algerian" size="28.0" />
+                     </font>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Text>
+                  <Text fx:id="score" fill="#ffe100" layoutX="1098.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0">
+                     <font>
+                        <Font name="Algerian" size="28.0" />
+                     </font>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Text>
+                  <Button fx:id="custom" layoutX="42.0" layoutY="607.0" mnemonicParsing="false" onAction="#customPuzzle" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Custom">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                     <font>
+                        <Font name="Algerian" size="24.0" />
+                     </font>
+                  </Button>
+                  <TextArea fx:id="help" editable="false" layoutX="10.0" layoutY="251.0" opacity="0.85" prefHeight="340.0" prefWidth="225.0" visible="false" wrapText="true">
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </TextArea>
+                  <Label fx:id="error" layoutX="544.0" layoutY="149.0" prefHeight="41.0" prefWidth="195.0" style="-fx-alignment: center;" textFill="#fff800">
+                     <font>
+                        <Font name="Algerian" size="22.0" />
+                     </font></Label>
+                  <Text fill="#ffe100" layoutX="987.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rank:" wrappingWidth="101.46875">
+                     <font>
+                        <Font name="Algerian" size="28.0" />
+                     </font>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Text>
+                  <Text fx:id="rank" fill="#ffe100" layoutX="1076.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0">
+                     <font>
+                        <Font name="Algerian" size="28.0" />
+                     </font>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Text>
+                  <Button fx:id="quit" layoutX="219.0" layoutY="607.0" mnemonicParsing="false" onAction="#quit" prefHeight="41.0" prefWidth="150.0" style="-fx-background-color: orange;" text="Quit">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                     <font>
+                        <Font name="Algerian" size="24.0" />
+                     </font>
+                  </Button>
                </children>
             </Pane>
          </children>
