--- a/src/main/resources/StyleSheets/circlebutton.css
+++ b/src/main/resources/StyleSheets/circlebutton.css
@@ -2,8 +2,9 @@
  
 
     -fx-background-radius: 50em; /* Makes the button circular */
-    -fx-background-color: #e2dddd;
+    -fx-background-color: #1E90FF;
     -fx-font-size: 20px;
     -fx-padding: 10px;
     -fx-border-radius: 50em; /* Optional: Adds a circular border */
+    
 }
