Additions to new code

--- a/src/main/resources/nopointers/GUI2.fxml
+++ b/src/main/resources/nopointers/GUI2.fxml
@@ -306,6 +306,30 @@
                         <Font name="Algerian" size="20.0" />
                      </font>
                   </Button>
+                  <TextArea fx:id="scoresBox" editable="false" layoutX="12.0" layoutY="89.0" opacity="0.85" prefHeight="441.0" prefWidth="447.0" visible="false" wrapText="true">
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </TextArea>
+                  <TextField fx:id="enterName" alignment="CENTER" layoutX="114.0" layoutY="245.0" onAction="#guess" prefHeight="51.0" prefWidth="166.0" promptText="Name" visible="false">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </TextField>
+                  <Button fx:id="enter" layoutX="313.0" layoutY="242.0" mnemonicParsing="false" onAction="#guess" prefHeight="58.0" prefWidth="87.0" style="-fx-background-color: lime;" text="Enter" visible="false">
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                     <font>
+                        <Font name="Algerian" size="18.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children>
             </Pane>
          </children>
